# typed-wasm

./: CHANGELOG.md  LICENSE  typed-wasm.cabal
.github/workflows/: ci.yml
src/TypedWasm/: Eval.hs  Instruction.hs  Numeric.hs  SExpr.hs  WAT.hs
src/TypedWasm/Definition/: Constant.hs  Instruction.hs  List.hs  Memory.hs  Module.hs  Types.hs
src/TypedWasm/Util/: Enum.hs  List.hs  SExpr.hs
src/TypedWasm/WAT/: Export.hs  SExpr.hs
test/: Main.hs
test/TypedWasm/Test/: Compile.hs  Eval.hs  Example.hs  Ops.hs
