cabal-version:      3.4
name:               typed-wasm
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ed Wastell
maintainer:         ed@wastell.co.uk
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared
  ghc-options: -Wall
  default-language: GHC2021
  build-depends: base ^>= 4.18.0.0
    , text
    , containers
    , mtl
    , bytestring
    , containers
  default-extensions: OverloadedStrings

library
  import: shared
  exposed-modules:  TypedWasm.Definition.Types
  hs-source-dirs:   src

test-suite typed-wasm-test
  import: shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends: typed-wasm
    , tasty
