cabal-version:      3.4
name:               typed-wasm
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ed Wastell
maintainer:         ed@wastell.co.uk
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared
  ghc-options: -Wall
  default-language: GHC2021
  build-depends: base ^>= 4.18.0.0
    , bytestring >= 0.11.5 && < 0.12
    , containers >= 0.6.7 && < 0.7
    , mtl >= 2.3.1 && < 2.4
    , prettyprinter >= 1.7.1 && < 1.8
    , singletons >= 3.0.2 && < 3.1
    , singletons-base >= 3.2 && < 3.3
    , singletons-th >= 3.2 && < 3.3
    , text >= 2.0.2 && < 2.1
  default-extensions: 
      DataKinds
    , DerivingStrategies
    , GADTs
    , OverloadedLabels
    , OverloadedStrings
    , PatternSynonyms
    , TemplateHaskell
    , PolyKinds
    , DeriveAnyClass
    , TypeFamilies
    , UndecidableInstances

library
  import: shared
  exposed-modules:  TypedWasm.Definition.Types
    , TypedWasm.Definition.Instruction
    , TypedWasm.Definition.Module
    , TypedWasm.Definition.Memory
    , TypedWasm.Definition.Constant
    , TypedWasm.WAT
    , TypedWasm.Util.Enum
    , TypedWasm.Util.List
    , TypedWasm.Util.SExpr
  hs-source-dirs:   src

test-suite typed-wasm-test
  import: shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules: TypedWasm.Test.Example
    , TypedWasm.Test.Ops
  build-depends: typed-wasm
    , tasty
    , tasty-hunit
    , filepath
    , temporary
    , process
